refactor(server & frontend): add expires_at return value on CreateURL query
- Update agent, API and related docs
- Update related services, handlers and tests
